8265489: Stress test times out because of long ObjectSynchronizer::monitors_iterate(...) operation

Backport-of: a5e4def526697d88ff31a5fdb41d823b899372f2